# Robot

./: .gitignore  CMakeLists.txt  README.md  plotting.py
control/: CMakeLists.txt
control/include/: LQR.h  Linear.h  NonLinear.h  PID.h  Simulation.h
control/src/: LQR.cpp  Linear.cpp  NonLinear.cpp  Simulation.cpp
programs/: CMakeLists.txt  ControlTest.cpp  ParticleTest.cpp
